updated spacing on footer links, update z index on udraw image and corrected syntax on two items on css file

--- a/style.css
+++ b/style.css
@@ -186,10 +186,21 @@ align-items: center;
 }
 
 .header__img--wrapper {
-/*padding: 20px;  */
 z-index: 2;
 position:relative;
-    
+padding:0;
+/*adding this below to fix sizing issue*/
+display: flex; 
+justify-content: center; 
+align-items: center;
+max-height: 40vh; 
+overflow: hidden; 
+}
+
+.header__img--wrapper img {
+max-height: 100%;
+width:auto;
+/*object-fit: contain; */
 }
 
 .container {
@@ -239,6 +250,7 @@ transform: translateY(1px); /*moves button down for satisfying click*/
 background-color: #7342d6;
 color: white;
 padding: 12px 24px;
+margin-bottom: 10px;
 font-size: 20px;
 border-radius: 4px;
 border: none;
@@ -261,7 +273,7 @@ content: "";
 position: absolute;
 left: 0;
 width: 101vw;
-height: 12vw;
+height: 12vw; 
 background-size: cover;
 background-repeat: no-repeat;
 z-index:1;
